Extended symbol tables properly handle macros.
Functions do not yet work and is my next area of investigation.

--- a/tests/exsymtab/Makefile
+++ b/tests/exsymtab/Makefile
@@ -16,7 +16,8 @@ endif
 TCC = $(TOP)/tcc $(TCCFLAGS)
 
 TESTS =	\
- 01-test-symtab-copy.test
+ 01-test-symtab-copy.test \
+ 10-link-two-contexts.test
 
 
 # some tests do not pass on all platforms, remove them for now
@@ -29,7 +30,7 @@ TESTS =	\
 
 %.test: %.c $(top_builddir)/$(LIBTCC)
 	$(CC) -o $@ $^ $(CPPFLAGS) $(CFLAGS) $(NATIVE_DEFINES) $(LIBS) $(LINK_LIBTCC) $(LDFLAGS) -I$(top_srcdir)
-	./$@
+	./$@ lib_path=$(top_srcdir)
 	rm $@
 
 all test: $(TESTS)
