Conclusion: setting weak linking for symbols does not solve the issue

--- a/tests/exsymtab/Makefile
+++ b/tests/exsymtab/Makefile
@@ -19,7 +19,11 @@ TCC = $(TOP)/tcc $(TCCFLAGS)
 TESTS =	\
  01-test-symtab-copy.test \
  20-two-contexts-define-share.test \
- 30-two-contexts-struct-share.test
+ 30-two-contexts-struct-share.test \
+ 35-two-contexts-vtable-share.test \
+ 40-two-contexts-func-decl-share.test \
+ 42-three-contexts-func-share.test \
+ 45-two-contexts-func-share.test
 
 
 # some tests do not pass on all platforms, remove them for now
