--- a/tests/exsymtab/Makefile
+++ b/tests/exsymtab/Makefile
@@ -19,11 +19,13 @@ TCC = $(TOP)/tcc $(TCCFLAGS)
 TESTS =	\
  01-test-symtab-copy.test \
  20-two-contexts-define-share.test \
+ 25-two-contexts-intertwined-preprocessor-macro.test \
  30-two-contexts-struct-share.test \
  35-two-contexts-vtable-share.test \
  40-two-contexts-func-decl-share.test \
  42-three-contexts-func-share.test \
- 45-two-contexts-func-share.test
+ 45-two-contexts-func-share.test \
+ 50-two-contexts-mixup.test
 
 
 # some tests do not pass on all platforms, remove them for now
@@ -36,7 +38,7 @@ TESTS =	\
 
 %.test: %.c $(top_builddir)/$(LIBTCC)
 	$(CC) -o $@ $^ $(CPPFLAGS) $(CFLAGS) $(NATIVE_DEFINES) $(LIBS) $(LINK_LIBTCC) $(LDFLAGS) -I$(top_srcdir)
-	./$@ lib_path=$(top_srcdir)
+	prove --exec '' ./$@ :: lib_path=$(top_srcdir)
 	rm $@
 
 all test: $(TESTS)
