--- a/tests/exsymtab/Makefile
+++ b/tests/exsymtab/Makefile
@@ -30,8 +30,8 @@ TESTS =	\
  47-many-consuming-contexts-func-share.test \
  48-many-consuming-contexts-delete.test \
  49-many-consuming-contexts-early-delete.test \
- 50-two-contexts-mixup.test 
-# 51-many-consuming-contexts-with-constants-early-delete.test \
+ 50-two-contexts-mixup.test \
+ 51-many-consuming-contexts-with-constants-early-delete.test 
 # 70-symtab-use-check.test
 
 PROVES =	\
@@ -48,8 +48,8 @@ PROVES =	\
  47-many-consuming-contexts-func-share.prove \
  48-many-consuming-contexts-delete.prove \
  49-many-consuming-contexts-early-delete.prove \
- 50-two-contexts-mixup.prove 
-# 51-many-consuming-contexts-with-constants-early-delete.prove \
+ 50-two-contexts-mixup.prove \
+ 51-many-consuming-contexts-with-constants-early-delete.prove 
 # 70-symtab-use-check.prove
 
 # some tests do not pass on all platforms, remove them for now
@@ -76,6 +76,6 @@ all test: $(TESTS)
 
 prove: $(PROVES)
 
-curr-test: 50-two-contexts-mixup.test
-curr-prove: 50-two-contexts-mixup.prove
-curr-dbg: 50-two-contexts-mixup.dbg
+curr-test: 51-many-consuming-contexts-with-constants-early-delete.
+curr-prove: 51-many-consuming-contexts-with-constants-early-delete.prove
+curr-dbg: 51-many-consuming-contexts-with-constants-early-delete.
