Huge commit, switch to struct extended_symtab
This includes the switch to a more generic representation of the
extended symtab as a struct, rather than as a strange pointer list.
This led to a change of API, which led to substantial changes in
all of the tests. I also debugged some of the popcount and other
c_trie code.

--- a/tests/exsymtab/Makefile
+++ b/tests/exsymtab/Makefile
@@ -72,6 +72,10 @@ PROVES =	\
 	$(CC) -o $@ $^ $(CPPFLAGS) $(CFLAGS) $(NATIVE_DEFINES) $(LIBS) $(LINK_LIBTCC) $(LDFLAGS) -I$(top_srcdir)
 	gdb --args $@ lib_path=$(top_srcdir); rm $@
 
+%.valgrind: %.c $(top_builddir)/$(LIBTCC)
+	$(CC) -o $@ $^ $(CPPFLAGS) $(CFLAGS) $(NATIVE_DEFINES) $(LIBS) $(LINK_LIBTCC) $(LDFLAGS) -I$(top_srcdir)
+	valgrind --leak-check=yes ./$@ lib_path=$(top_srcdir); rm $@
+
 all test: $(TESTS)
 
 prove: $(PROVES)
