this fixes comparisons of pointers to include all 64 bits
test case: if((void *)0x100000000L) printf("bad");

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -127,6 +127,7 @@ set(MORETESTS
  52_unnamed_enum
  54_goto
  55_lshift_type
+ 56_32bit_pointer
 )
 if(WIN32)
   list(REMOVE_ITEM MORETESTS 24_math_library)
