Comment-out checks for exsymtab
A lot of work went in to adding exsymtab as a configuration option,
including guarding exsymtab-specific code with #ifdef blocks.
Unfortunately, these ifdef blocks are included in libtcc.h, which
complicates the use of exsymtab in consuming code. Furthermore,
win32 did not properly set up the preprocessor definitions.

If we want to make exsymtab a configuration option, then both *nix
and win32 build scripts should be smart enough to update config.h
(for cross-platform build process) and libtcc.h (for cross-platform
configurable API).

--- a/tests/exsymtab/Makefile
+++ b/tests/exsymtab/Makefile
@@ -14,7 +14,8 @@ ifeq ($(TARGETOS),Darwin)
  export MACOSX_DEPLOYMENT_TARGET:=10.2
 endif
 
-CFLAGS += -DCONFIG_TCC_EXSYMTAB -Wno-declaration-after-statement
+#CFLAGS += -DCONFIG_TCC_EXSYMTAB -Wno-declaration-after-statement
+CFLAGS += -Wno-declaration-after-statement
 TCC = $(TOP)/tcc $(TCCFLAGS)
 
 # 02-ram_tree.test 
